# robotica-lab1-agv-sim

./: .gitignore  PROJECT_PLAN.md  README.md  REQUIREMENTS_TRACEABILITY.md  TRAZABILIDAD_REQUISITOS.md  demo.py  generar_pdf_defensa.py  pyproject.toml
docs/: DEFENSE_GUIDE.md  FAQ_Defensa.md  guion_audio.txt
docs/assets/: Lab_1_INFO1167_Robotica_original.txt  demo_summary.json
docs/research/: AGV_Project_Research.md
scripts/: ejecutar_simulacion.py  ejecutar_vpython.py  pipeline.py  run_simulation.py  run_vpython.py
src/agv_sim/: __init__.py  animacion_pygame.py  animacion_tkinter.py  animacion_vpython.py  grafos.py  graph_utils.py  modelos.py  models.py  requirements_check.py  simulacion.py  simulation.py  sprites.py  verificador.py  visualizador.py  visualizer.py  vpython_vis.py
tests/: test_grafos.py  test_graph_utils.py  test_simulacion.py  test_simulation.py
