[project]
name = "robotica-lab1-agv-sim"
version = "0.1.0"
description = "Simulacion de AGV para INFO1167 Robotica Lab #1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.8",
  "networkx>=3.2",
  "numpy>=1.26",
  "pillow>=10.0",
  "vpython>=7.6",
  "setuptools<70",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
